--- a/style.css
+++ b/style.css
@@ -7,12 +7,8 @@
 	height: 100vh;
 	width: 100vw;
 	display: flex;
-	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-}
-.container h1{
-	margin: 30px;
 }
 .counter{
 	width: 100%;
@@ -26,12 +22,11 @@
 	border-radius: 10px;
 	font-size: 40px;
 	background-color: #2e8d46;
-	border: 2px solid #2e8d46;
 	color: white;
-	margin: 20px;
-}
-#reset{
-	font-size: 20px;
+	position: absolute;
+  	top: 50%;
+  	left: 50%;
+  	transform: translate(-50%, -50%);
 }
 #counter-value{
 	height: 50px;
