--- a/style.css
+++ b/style.css
@@ -15,18 +15,35 @@
 	display: flex;
 	justify-content: center;
 }
-#increment-btn, #decrement-btn, #reset{
+#increment-btn{
 	height: 50px;
-	width: 120px;
-	padding: 0 40px;
-	border-radius: 10px;
-	font-size: 40px;
-	background-color: #2e8d46;
-	color: white;
+    	width: 120px;
+    	padding: 0 40px;
+    	border-radius: 10px;
+   	font-size: 40px;
+    	background-color: #2e8d46;
+    	border: 2px solid #2e8d46;
+    	color: white;
+    	margin: 20px;
 	position: absolute;
   	top: 50%;
   	left: 50%;
-  	transform: translate(-50%, -50%);
+  	transform: translate(-130%, 500%);
+}
+#decrement-btn{
+	height: 50px;
+    	width: 120px;
+    	padding: 0 40px;
+    	border-radius: 10px;
+   	font-size: 40px;
+    	background-color: #2e8d46;
+    	border: 2px solid #2e8d46;
+    	color: white;
+    	margin: 20px;
+	position: absolute;
+  	top: 50%;
+  	left: 50%;
+  	transform: translate(-5%, 500%);
 }
 #counter-value{
 	height: 50px;
@@ -36,5 +53,5 @@
 	position: absolute;
   	top: 50%;
   	left: 50%;
-  	transform: translate(-50%, -50%);
+  	transform: translate(100%, -50%);
 }
