--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@
   	left: 50%;
   	transform: translate(-5%, 500%);
 }
-#counter-value{
+#counter-valueR{
 	height: 50px;
 	min-width: 120px;
 	margin-top: 20px;
