--- a/style.css
+++ b/style.css
@@ -55,3 +55,13 @@
   	left: 50%;
   	transform: translate(172%, 50%);
 }
+#counter-valueL{
+	height: 50px;
+	min-width: 120px;
+	margin-top: 20px;
+	font-size: 30px;
+	position: absolute;
+  	top: 50%;
+  	left: 50%;
+  	transform: translate(-172%, 50%);
+}
