--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 	justify-content: center;
 	align-items: center;
 }
-.counter{
+.scale-counter{
 	width: 100%;
 	display: flex;
 	justify-content: center;
