--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@
 	margin: 0px;
 	padding: 0px;
 }
+body {
+	background-image: url('Images/Background.png');
+}
 .container{
 	height: 100vh;
 	width: 100vw;
