--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 	padding: 0px;
 }
 body {
-	background-image: url('Images/Background.png');
+	background-color:Tomato;
 }
 .container{
 	height: 100vh;
