--- a/style.css
+++ b/style.css
@@ -10,7 +10,8 @@ body {
 	height: 100vh;
 	width: 100vw;
 	display: flex;
-	justify-content: center;
+	position: absolute;
+	top: -20%;
 	align-items: center;
 }
 #scale{
