--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ body {
 }
 #counter-valueR{
 	z-index: 1;
-	color:#696969;
+	color:#FFFFFF;
 	height: 50px;
 	min-width: 120px;
 	margin-top: 20px;
@@ -101,7 +101,7 @@ body {
 	position: absolute;
   	top: 50%;
   	left: 50%;
-  	transform: translate(170%, 50%);
+  	transform: translate(170%, 80%);
 }
 #increment-btnL{
 	height: 50px;
@@ -120,7 +120,7 @@ body {
 }
 #counter-valueL{
 	z-index: 1;
-	color:#696969;
+	color:#FFFFFF;
 	height: 50px;
 	min-width: 120px;
 	margin-top: 20px;
@@ -128,7 +128,7 @@ body {
 	position: absolute;
   	top: 50%;
   	left: 50%;
-  	transform: translate(-182.5%, 50%);
+  	transform: translate(-182.5%, 80%);
 }
 .attack, .health{
 	z-index: 1;
