--- a/style.css
+++ b/style.css
@@ -218,3 +218,14 @@ body {
 	top: 106%;
   	left: 12.7%;
 }
+#increment-btnT1A, #increment-btnT2A, #decrement-btnT1A, #decrement-btnT2A{
+	height: 50px;
+    	width: 120px;
+    	padding: 0 40px;
+    	border-radius: 10px;
+   	font-size: 40px;
+    	background-color: #2e8d46;
+    	border: 2px solid #2e8d46;
+    	color: white;
+    	margin: 20px;
+}
